fix: update parallax initialization and adjust styles in Hero and Intro sections - comment out previous parallax effect on Hero logo - add parallax effect for Hero video - modify speed settings for Intro section titles - adjust alignment and padding in Hero SCSS for improved layout

--- a/src/styles/scss/_hero.scss
+++ b/src/styles/scss/_hero.scss
@@ -32,8 +32,10 @@
     // background-position: center;
     // background-repeat: no-repeat;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
+
+    padding-top: 10%;
 
     img {
       width: 100%;
@@ -107,7 +109,7 @@
     }
   }
   .logo { 
-    top: 0%;
+    top: 5%;
     left: 4%;
   }
 }
